navbar fabicon added and index page wip

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,12 @@
-.navbar-lewagon {
+.navbar-plug {
   justify-content: space-between;
-  background: white;
+  background: #191919;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-plug .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-plug .navbar-brand img {
   width: 40px;
 }
