--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -1,27 +1,36 @@
-<div class="list">
-  <div class="title">Your favourite songs by event</div>
-    <table class="table">
-    <thead class="thead-light">
-      <tr>
-        <th><div class="button-header">Event</div></th>
-        <th><div class="button-header">Album</div></th>
-        <th><div class="button-header">Song</div></th>
-      </tr>
-   </thead>
-   <tbody>
-    <tr>
-      <td scope="col"> <p> <%=  "#{events.date}" %> </p></td>
-      <td scope="col"> <p> <%= "#{events.venue}" %> </p></td>
-    </tr>
-    <tr>
-      <td scope="col"> <p> <%= "#{track.name}" %> </p></td>
-      <td scope="col"> <p> <%= "#{track.album}" %> </p></td>
-    </tr>
-    <tr>
-      <td scope="col"> <p> <%= "#{artist.name}" %> </p></td>
-      <td scope="col"> <p> <%= "#{artist.genres}" %> </p></td>
-    </tr>
-    </tbody>
-  </table>
-
+<div class="search-bar">
+  <%= form_tag library_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Find the events"
+    %>
+    <div class="search">
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+  <% end %>
+  </div>
 </div>
+
+<div class="title" class="float-right">Your favourite songs by event</div>
+
+<nav>
+  <div class="nav nav-tabs" id="nav-tab" role="tablist">
+    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Artists</a>
+    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Tracks</a>
+  </div>
+</nav>
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+    <% @my_tracks.each do |track| %>
+      <% track.artists.each do |artist| %>
+      <%= render "shared/artist_card", artist: artist %>
+      <% end %>
+    <% end %>
+  </div>
+  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+    <% @my_tracks.each do |track| %>
+    <%= render "shared/track_card", track: track %>
+    <% end %>
+  </div>
+</div>
+
