--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,18 @@
+<!-- <input type="button" value="Plug" onclick="findMe();" /> -->
 <div class="container">
   <div class="row justify-content-center">
     <h1><%= "Choose the event you are at to get plugged" %></h1>
     <div class="card-event">
-      <img src= <%= "https://images.unsplash.com/photo-1555456274-58a32f9c3fad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" %>>
+    <% @events.each do |event| %>
+      <%= event.venue %>
+      <%= event.display_name %>
+      <% if event.artist_image.exist? %>
+        <%= image_tag(event.artist_image) %>
+      <% else %>
+        <%= image_tag("artist.png") %>
+      <% end %>
+      <!-- in the model -->
+    <% end %>
       <div class="card-event-title">
         <div>
           <h2><%= "Event title here" %></h2>
@@ -12,5 +22,6 @@
         <img src= <%= "https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" %> class="card-trip-venueimg avatar-bordered";>
       </div>
     </div>
+
   </div>
 </div>
