--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -1,9 +1,14 @@
-<div class="card-product">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-  <div class="card-product-infos">
-    <h2><%= track.name %></h2>
-    <p><%= track.album %></p>
+<div class="container">
+  <div class="row justify-content-center">
+      <div class="col-12 col-lg-6">
+        <div class="card-product">
+          <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" />
+          <div class="card-product-infos">
+            <h2><%= track.name %></h2>
+            <p><%= track.album %></p>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
-
 
