--- a/app/views/shared/_artist_card.html.erb
+++ b/app/views/shared/_artist_card.html.erb
@@ -1,8 +1,13 @@
-<div class="card-product">
-  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-  <div class="card-product-infos">
-    <h2><%= artist.name %></h2>
-    <p><%= artist.genres %></p>
+<div class="container">
+  <div class="row justify-content-center">
+      <div class="col-12 col-lg-6">
+        <div class="card-product">
+          <img src="https://images.unsplash.com/photo-1525908034958-2c082cd0fed2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80" />
+          <div class="card-product-infos">
+            <h2><%= artist.name %></h2>
+            <p><%= artist.genres %></p>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
-
