added video and cards

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,40 +1,37 @@
-<div class="home-video-wrapper">
-  <%= video_tag "concert.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: 'home_video' %>
-  <div class="container">
-    <h1> Plug yourself into <strong></h1>
-    <h1>fresh, niche, curated music list!</strong>!</h1>
-    <p>Get your playlist once enjoying yourself at the concert!</p>
-    <%= link_to "Get it now", events_index_path, class: "btn btn-gradient" %></h1>
-  </div>
-</div>
-
-
-  <div class="card">
-     <% @tracks.each do |track| %>
-      <% track.artists.each do |artist| %>
-      <%= render "shared/artist_card", artist: artist %>
-      <% end %>
-    <% end %>
-    </div>
-
-  <div class="card">
-    <% @tracks.each do |track| %>
-    <%= render "shared/track_card", track: track %>
-    <% end %>
-
-  </div>
+.home_video {
+ width: 100vw;
+ height: 100vh;
+ position: absolute;
+ display: flex;
+ justify-content: center;
+ object-fit: cover;
+ top: 0;
+ z-index: -2;
+}
 
 
 
-<div class="footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
-  </div>
-  <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Pet Sitter
-  </div>
-</div>
+.home-video-wrapper {
+height: 100vh;
+display: flex;
+padding: 350px 0;
+}
+
+
+.container h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+}
+
+
+
+.container p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+
+}
