--- a/app/views/shared/_artist_card.html.erb
+++ b/app/views/shared/_artist_card.html.erb
@@ -6,6 +6,7 @@
           <div class="card-product-infos">
             <h2><%= artist.name %></h2>
             <p><%= artist.genres %></p>
+            <i class="fas fa-star"></i>
           </div>
         </div>
       </div>
