--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,11 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+//Color palette:
+$purple: #614385;
+$black: #050404;
+$gray: #bdc3c7;
+$dark-gray: #2c3e50;
+$light-purple: #734B6D;
+$dark-purple: #42275A;
