--- a/app/assets/stylesheets/components/_event-card.scss
+++ b/app/assets/stylesheets/components/_event-card.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   height: 500px;
   // margin: 50px 0;
-  background: #191919;
+  background: $gray;
   // box-shadow: 0 0 5px rgba(0,0,0,0.1);
   // padding: 35px 35px;
   // box-shadow: 0 0 5px rgba(0,0,0,0.2);
