--- a/app/assets/stylesheets/components/_library.scss
+++ b/app/assets/stylesheets/components/_library.scss
@@ -90,9 +90,8 @@
     outline: none;
     border: none;
     // border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    background: #42275A;
+    background: white;
     color: white;
-    text-shadow: 0 0 10px #42275A;
     padding: 0 80px 0 20px;
     border-radius: 30px;
     box-shadow: 0 0 25px 0 #42275A,
