--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -4,6 +4,7 @@
       <div class="card-product-infos">
         <h2><%= track.name %></h2>
         <p><%= track.album %></p>
+        <i class="fas fa-star"></i>
       </div>
     </div>
 </div>
