--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -15,9 +15,9 @@
               <%= submit_tag "Search", class: "btn btn-primary" %>
             <% end %>
             </div>
+
           </div>
       <div class=decorated-box>
-
 
       <nav>
         <div class="container">
@@ -47,7 +47,11 @@
           </div>
         </div>
       </div>
+      <div class="row justify-content-center">
+        <%= link_to "Export your list", root_path, class: "btn btn-gradient" %>
     </div>
+    </div>
+
   </div>
   </div>
 </div>
