--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,11 +2,13 @@
  <h1> <%=current_user.events.name %></h1>
 </div>
 
+<div class="cards">
 <div class="top-songs">
   <h1>Top 5 songs</h1>
   <% @tracks.each do |track| %>
     <% track.artists.each do |artist| %>
     <%= render "shared/artist_card", artist: artist %>
+
     <% end %>
   <% end %>
 </div>
@@ -16,4 +18,5 @@
    <% @tracks.each do |track| %>
       <%= render "shared/track_card", track: track %>
       <% end %>
+</div>
 </div>
