--- a/app/views/shared/_artist_card.html.erb
+++ b/app/views/shared/_artist_card.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row justify-content-center">
-      <div class="col-12 col-lg-6">
         <div class="card-product">
           <img src="https://images.unsplash.com/photo-1525908034958-2c082cd0fed2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80" />
           <div class="card-product-infos">
             <h2><%= artist.name %></h2>
             <p><%= artist.genres %></p>
-            <i class="fas fa-star"></i>
+            <%= link_to star_path, class: "fas fa-star", method: :post %>
+
           </div>
         </div>
-      </div>
+
     </div>
 </div>
