artist image pulled from api and saved in event

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,16 +4,21 @@
 
 <div class="top-songs">
   <h1>Top 5 songs</h1>
-  <% @tracks.each do |track| %>
-    <% track.artists.each do |artist| %>
-    <%= render "shared/artist_card", artist: artist %>
+  <% @event_users.each do |user| %>
+    <% user.tracks_users.each do |tracks_user| %>
+    <%= track = Track.find(tracks_user.track_id) %>
+    <%= render "shared/track_card", track: track %>
     <% end %>
   <% end %>
 </div>
 
 <div class="top-artists">
   <h1>Top 5 artists</h1>
-   <% @tracks.each do |track| %>
-      <%= render "shared/track_card", track: track %>
-      <% end %>
+  <% @event_users.each do |user| %>
+    <% user.tracks_users.each do |tracks_user| %>
+    <% artistid = ArtistsTrack.find(tracks_user.track_id).artist_id %>
+    <%= artist = Artist.find(artistid) %>
+    <%= render "shared/artist_card", artist: artist %>
+    <% end %>
+  <% end %>
 </div>
