--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,11 +3,12 @@
   <div class="row justify-content-center">
     <h1><%= "Choose the event you are at to get plugged" %></h1>
     <div class="card-event">
-    <%= @main_event.venue %>
-    <%= @main_event.title %>
-    <%= @main_event.artist %>
+    <% if @main_event.nil? == false %>
+      <%= @main_event.venue %>
+      <%= @main_event.title %>
+      <%= @main_event.artist %>
       <% if @main_event.photo.attached? %>
-        <%= cl_image_tag @main_event.photo.key%>
+        <%= cl_image_tag @main_event.photo.key, height: 300, width: 400, crop: :fill %>
       <% else %>
         <%= image_tag("artist.png") %>
       <% end %>
@@ -19,6 +20,9 @@
         </div>
         <h2 class="card-trip-venue"><%= "Shibuya Scramble" %></h2>
         <img src= <%= "https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" %> class="card-trip-venueimg avatar-bordered";>
+    <% else %>
+      <%= "No event found" %>
+    <% end %>
       </div>
     </div>
   </div>
