--- a/app/assets/stylesheets/components/_event-card.scss
+++ b/app/assets/stylesheets/components/_event-card.scss
@@ -8,12 +8,18 @@
   // box-shadow: 0 0 5px rgba(0,0,0,0.2);
   // border-radius: 25px;
   // background: #FEFFFE;
+  background-size: cover;
+  background-position: center;
+
 }
 
 .card-event > img {
   height: 400px;
   width: 100%;
   object-fit: cover;
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
 }
 
 .card-event h1 {
@@ -30,17 +36,3 @@
   color: #C9C9EE;
 }
 
-.card-event .card-event-title {
-
-}
-
-.card-event .card-event-venue {
-
-}
-
-.card-trip-venue .card-trip-venueimg {
-  position: absolute;
-  right: 16px;
-  top: -20px;
-  width: 40px;
-}
