--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,6 +3,7 @@
 </div>
 
 <div class="cards">
+
 <div class="top-songs">
   <h1>Top 5 songs</h1>
   <% @tracks.each do |track| %>
@@ -14,9 +15,7 @@
 
 <div class="top-artists">
   <h1>Top 5 artists</h1>
-  <% @artists.each do |artist| %>
-    <%= artist.name %>
-    <%= render "shared/artist_card", artist: artist %>
-  <% end %>
-</div>
+   <% @tracks.each do |track| %>
+      <%= render "shared/track_card", track: track %>
+      <% end %>
 </div>
