--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
         <div >
             <% @tracks.each do |track| %>
               <% track.artists.each do |artist| %>
-              <%= render "shared/artist_card", artist: artist %>
+              <%= render "shared/artist_card", locals: { artist: artist, event: nil } %>
               <% end %>
             <% end %>
         </div>
