--- a/app/views/shared/_artist_card.html.erb
+++ b/app/views/shared/_artist_card.html.erb
@@ -3,8 +3,8 @@
         <div class="card-product">
           <img src="https://images.unsplash.com/photo-1525908034958-2c082cd0fed2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80" />
           <div class="card-product-infos">
-            <h2><%= artist.name %></h2>
-            <p><%= artist.genres %></p>
+            <h2><%=  locals[:artist].name %></h2>
+            <p><%=  locals[:artist].genres %></p>
             <% unless locals[:event].nil? %>
               <%= link_to star_path(artist: locals[:artist], event: locals[:event]), class: "fas fa-star", method: :post %>
             <% end %>
