--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,22 +5,18 @@
     <div class="card-event">
     <% if @main_event.nil? == false %>
       <div class="card-event-title">
-      <%= @main_event.venue %>
-      <%= @main_event.title %>
-      <%= @main_event.artist %>
+      <ul><%= @main_event.venue %></ul>
+      <ul><%= @main_event.title %></ul>
+      <ul><%= @main_event.artist %></ul>
       <% if @main_event.photo.attached? %>
         <%= cl_image_tag @main_event.photo.key, crop: :fill %>
       <% else %>
         <%= image_tag("artist.png") %>
       <% end %>
         <%= link_to "Confirm", check_in_event_path(@main_event), method: :post, class: "btn btn-gradient" %>
-          <h2><%= "Event title here" %></h2>
-          <p><%= "Event description here" %></p>
-        <h2 class="card-trip-venue"><%= "Shibuya Scramble" %></h2>
         <img src= <%= "https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" %> class="card-trip-venueimg avatar-bordered";>
     <% else %>
       <%= "No event found" %>
-      <%= link_to "Confirm", check_in_event_path(@main_event), method: :post %></p>
       <%= image_tag("artist.png") %>
     <% end %>
         </div>
