--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,25 +1,32 @@
 <!-- <input type="button" value="Plug" onclick="findMe();" /> -->
 <div class="container">
-  <div class="row justify-content-center">
-    <h1><%= "Choose the event you are at to get plugged" %></h1>
-    <div class="card-event">
+ <div class="row justify-content-center">
+  <h2>Choose the event you are at to get plugged</h2>
+    <div class="decorated-box">
     <% if @main_event.nil? == false %>
-      <div class="card-event-title">
-      <ul><%= @main_event.venue %></ul>
-      <ul><%= @main_event.title %></ul>
-      <ul><%= @main_event.artist %></ul>
+      <div class="card-event">
+
+      <h1><%= @main_event.venue %></h1>
+      <h1><%= @main_event.title %></h1>
+      <p><%= @main_event.artist %></p>
+
       <% if @main_event.photo.attached? %>
         <%= cl_image_tag @main_event.photo.key, crop: :fill %>
       <% else %>
         <%= image_tag("artist.png") %>
       <% end %>
+
+      </div >
+      <div class="container">
+      <div class="row justify-content-center">
         <%= link_to "Confirm", check_in_event_path(@main_event), method: :post, class: "btn btn-gradient" %>
         <img src= <%= "https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" %> class="card-trip-venueimg avatar-bordered";>
     <% else %>
       <%= "No event found" %>
       <%= image_tag("artist.png") %>
     <% end %>
-        </div>
+    </div>
+    </div>
       </div>
     </div>
   </div>
