--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -3,14 +3,12 @@
     <div class="card-product">
       <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" />
       <div class="card-product-infos">
-        <h2><%= track.name %></h2>
-        <p><%= track.album %></p>
-        <% event ||= nil %>
-        <% if event %>
-         <%= link_to star_path(track: track, event: event), class: "fas fa-star", method: :post %>
+        <h2><%= locals[:track].name %></h2>
+        <p><%= locals[:track].album %></p>
+        <% unless locals[:event].nil? %>
+         <%= link_to star_path(track: locals[:track], event: locals[:event]), class: "fas fa-star", method: :post %>
         <% end %>
       </div>
     </div>
   </div>
 </div>
-
