--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,14 +1,14 @@
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1763075/pexels-photo-1763075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)"></div>
 
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1763075/pexels-photo-1763075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)">
+<h1> <%=@event.venue %></h1></div>
 <div class="cards">
   <div class="top-songs">
     <h1>Top 5 songs</h1>
     <% @tracks.each do |track| %>
       <% track.artists.each do |artist| %>
       <%= render "shared/artist_card", locals: { artist: artist, event: @event } %>
-      <% end %>
-      <% end %>
-  </div>
+      <% end %></div>
+    <% end %>
   <div class="top-artists">
     <h1>Top 5 artists</h1>
     <% @tracks.each do |track| %>
