--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -4,9 +4,12 @@
       <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" />
       <div class="card-product-infos">
         <h2><%= locals[:track].name %></h2>
-        <p><%= locals[:track].album %></p>
         <% unless locals[:event].nil? %>
-          <%= link_to "", star_path(track: locals[:track], event: locals[:event], user: current_user.id), class: "fas fa-star", method: :post  %>
+          <% unless TracksUser.find_by(track: locals[:track], user: current_user, event: locals[:event]).nil? %>
+            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star", method: :delete  %>
+          <% else %>
+            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star non-color-star", method: :post  %>
+          <% end %>
         <% end %>
       </div>
     </div>
