--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,7 +16,7 @@
           <%= link_to "Library",library_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Events", events_path, class: "nav-link" %>
+          <%= link_to "Events", events_path, class: "nav-link", id: "event-index" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
