--- a/app/assets/stylesheets/components/_card-category.scss
+++ b/app/assets/stylesheets/components/_card-category.scss
@@ -13,3 +13,14 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
+
+// @media (min-device-width:600px) {
+//     img[data-src-600px] {
+//         content: attr(data-src-600px, url);
+//     }
+// }
+// @media (min-device-width:800px) {
+//     img[data-src-800px] {
+//         content: attr(data-src-800px, url);
+//     }
+// }
