--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,29 +8,25 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+<body>
+  <nav role="navigation">
+  <div id="menuToggle">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Library",library_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Events", events_path, class: "nav-link", id: "event-index" %>
-        </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Home", root_path, class: "dropdown-item" %>
-            <%= link_to "My events", library_path, class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Login", api_v1_login_path, class: "btn btn-ghost" %>
-        </li>
-      <% end %>
+    <input type="checkbox" />
+
+
+    <span></span>
+    <span></span>
+    <span></span>
+
+    <ul id="menu">
+      <a href="#"><li>My profile</li></a>
+      <a href="#"><li>Events</li></a>
+      <a href="#"><li>Library</li></a>
     </ul>
   </div>
+</nav>
+</body>
+
+
 </div>
