--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,6 +20,7 @@ padding: 350px 0;
 
 .container h1 {
   margin: 0;
+  margin-bottom: 10px;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
@@ -29,6 +30,8 @@ padding: 350px 0;
 
 
 .container p {
+  margin-left: 0;
+  margin-bottom: 10px;
   font-size: 24px;
   color: white;
   opacity: .7;
