--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -1,14 +1,21 @@
+p {
+  font-size: 16px;
+  margin-left: 25px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  color: $gray;
+
+}
+
+
+
 h2 {
   font-size: 24px;
   font-weight: bold;
-  margin: 20px 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   color: #E4C1F9;
 
 }
 
-p {
-  font-size: 18px;
-  margin: 20px 20px;
-  color: $gray;
-
-}
