--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,19 +1,16 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12">
 
-      <div class="cta">
-        <h2>Check the events around you.</h2>
-        <p>Connect with people and share your music</p>
-      </div>
-    </div>
+  <div class="cta">
+    <h2>Check the events around you.</h2>
+    <p>Connect with people and share your music</p>
   </div>
 
+  <div class="container">
     <% if @main_event.nil? %>
     <div class="row">
       <div class="col-12 col-lg-3">
         <%= render "events/card", event: @main_event %>
       </div>
+
       <% @sub_events.each do |sub_event| %>
           <div class="col-12 col-lg-3">
             <%= render "events/card", event: sub_event %>
@@ -24,7 +21,7 @@
     <div class="row justify-content-md-center">
       <div class="col-6">
         <div class="card-product">
-          No event found
+          <p>No event found</p>
           <%= image_tag("artist.png") %>
         </div>
       </div>
