--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -1,6 +1,7 @@
   <div class="container">
-    <div class="col-10 col-lg-12">
-      <div class="search-bar">
+    <div class="row">
+      <div class="col-10 col-lg-12">
+        <div class="search-bar">
           <%= form_tag library_path, method: :get do %>
             <%= text_field_tag :query,
               params[:query],
@@ -11,28 +12,57 @@
           <% end %>
             </div>
         </div>
-      <div class=decorated-box>
-        <nav>
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="title" >Your favourite songs by event</div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Tracks</a>
-              </div>
-            </div>
-          </div>
-        </nav>
-        <div class="tab-content" id="nav-tabContent">
-          <div id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-            <% @tracks.each do |track| %>
-              <%= render "shared/track_card", locals: { track: track } %>
-            <% end %>
-          </div>
-        </div>
+       </div>
+    </div>
+   </div>
+
+      <div class="cta">
+         <h2>Immerse yourself with new music</h2>
+         <p>Get to know favourite songs of folks around</p>
       </div>
-      <div class="row justify-content-center">
-        <%= link_to "Export your list", root_path, class: "btn btn-gradient" %>
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1499364615650-ec38552f4f34?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1566&q=80" alt="First slide">
+      <div class="carousel-caption d-block d-md-block">
+        <h5>Maroon 5</h5>
+        <p>Sugar</p>
       </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1514525253161-7a46d19cd819?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" alt="Second slide">
+      <div class="carousel-caption d-block d-md-block">
+        <h5>Black Keys</h5>
+        <p>Lonely Boy</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1507676184212-d03ab07a01bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="Third slide">
+      <div class="carousel-caption d-block d-md-block">
+        <h5>Alabama Shakes</h5>
+        <p>This feeling</p>
+      </div>
+    </div>
   </div>
+</div>
+
+<div class="carousel-item">
+  <img src="..." alt="...">
+  <div class="carousel-caption d-none d-md-block">
+    <h5>...</h5>
+    <p>...</p>
+  </div>
+</div>
+
+    <% @tracks.each do |track| %>
+      <%= render "shared/track_card", locals: { track: track } %>
+    <% end %>
+
+  <div class="container">
+  <div class="row justify-content-center">
+    <%= link_to "Export your list", root_path, class: "btn btn-gradient" %>
+  </div>
+</div>
+
+
