--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <h1><strong>PLUG IN</strong></h1>
     <p>Fresh, niche, curated  </p>
     <p>music list at your fingertips!</p>
-    <%= link_to "Get started", events_path, class: "btn btn-gradient" %>
+    <%= link_to "Get started", events_path, class: "btn btn-gradient", id: "event-index" %>
   </div>
 </div>
 
