--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div class="container">
-    <% if @main_event.nil? %>
+    <% if @main_event.nil? == false %>
     <div class="row">
       <div class="col-12 col-lg-3">
         <%= render "events/card", event: @main_event %>
