--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1763075/pexels-photo-1763075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)">
   <h1> <%=@event.venue %></h1></div>
-    <div class="top-songs">
-      <h1>Top 5 songs</h1>
+  <div class="row justify-content-center">
+    <div class="cta">
+      <h2>Top 5 songs</h2>
+    </div>
+  </div>
       <% @tracks.each do |track| %>
         <%= render "shared/track_card", locals: { track: track, event: @event } %>
       <% end %>
-      </div>
-  </div>
+   </div>
 </div>
