--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,13 +1,12 @@
 .card-product {
   overflow: hidden;
   height: 200px;
-  width: 380px;
+  width: 100%;
   background: black;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   margin-top: 50px;
-
 
 
 }
