--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -1,5 +1,5 @@
 p {
-  font-size: 16px;
+  font-size: 14px;
   margin-left: 25px;
   margin-right: 20px;
   margin-bottom: 20px;
@@ -19,3 +19,12 @@ h2 {
 
 }
 
+h1 {
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  color: $white;
+
+}
