--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #F4F4F4;
+  // background: #F4F4F4;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -12,7 +12,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: $white;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
