--- a/app/views/events/_card.html.erb
+++ b/app/views/events/_card.html.erb
@@ -1,10 +1,13 @@
+
 <div class="card-product">
   <div class="card-product-infos">
     <h2><%= event.venue %></h2>
-    <h2><%= event.title %></h2>
+    <h1><%= event.title %></h1>
     <p><%= event.artist %></p>
   </div>
   <% if event.photo.attached? %>
     <%= cl_image_tag event.photo.key, crop: :fill %>
   <% end %>
 </div>
+
+<%= link_to "Confirm event", event_path(event), class: "btn btn-gradient" %>
