--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -4,12 +4,12 @@
     <div class="card-product">
       <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" />
       <div class="card-product-infos">
-        <h2><%= locals[:track].name %></h2>
         <% locals[:track].artists.each do |artist| %>
           <h2><%= artist.name  %></h2>
         <% end %>
+        <h1><%= locals[:track].name %></h1>
         <% unless locals[:likes].nil? %>
-          <h2>Liked by <%= locals[:likes]  %> users</h2>
+          <p><em>Liked by <%= locals[:likes]  %> user(s)</em></p>
         <% end %>
         <% unless locals[:event].nil? %>
           <% unless TracksUser.find_by(track: locals[:track], user: current_user, event: locals[:event]).nil? %>
